tried fixing opening closing tag star disappear issue on mobile with tailwind

--- a/app/film.scss
+++ b/app/film.scss
@@ -53,7 +53,7 @@
                 grid-column: 5 / 10;
                 
                 svg {
-                    max-width: 20px;
+                    // width: 20px;
                     fill: #D6366F;
                     stroke: #D6366F;
                     vertical-align: middle;
